# rust-individual-project-2

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  Makefile  README.md  loadtest.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench.yml  publish-gpu.yml  publish.yml  release.yml  rust.yml
K8s/: ingress.yaml  rustpod.yaml
benches/: sorting_benchmark.rs
frontend-summarization/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend-summarization/src/: App.vue  main.ts
frontend-summarization/src/assets/: 135693-ai-data.json  main.css
frontend-summarization/src/components/: TheWelcome.vue
frontend-summarization/src/components/__tests__/: HelloWorld.spec.ts
frontend-summarization/src/router/: index.ts
frontend-summarization/src/stores/: counter.ts  usePostsV3.ts  useSummatization.ts  users.ts
frontend-summarization/src/views/: HomeView.vue  SummarizationView.vue  SummarizationViewV2.vue
src/: lib.rs  main.rs  tests.rs
