[package]
name = "rust_ml_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
exitfailure = "0.5.1"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
serde = { version = "1.0.152", features = ["derive"] }
tch = "0.10.1"
uuid = { version = "1.2.2", features = ["v4"] }
clap = {version="4.0.32", features=["derive"]}
[profile.release]
opt-level = 1


[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "sorting_benchmark"
harness = false